--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,89 +1,68 @@
 <header>
 
-   <img class="logo ubicar" src="/images/logo_helartico.png">
-    <nav>
-      <ul>
-        <li>
-          <h4> 
+  <img class="logo ubicar" src="/images/logo_helartico.png">
+  <nav>
+    <ul>
+      <li>
+        <h4>
           <a href="/">Inicio</a>
-         </h4>
-        </li>
-        <li>
-          <h4>
+        </h4>
+      </li>
+      <li>
+        <h4>
           <a href="/productos">Productos</a>
-          </h4>
-        </li>
-        <li>
-          <h4>
+        </h4>
+      </li>
+      <li>
+        <h4>
           <a href="/sabores">Sabores</a>
-          </h4>
-        </li>
-        <li>
-          <h4>
+        </h4>
+      </li>
+      <li>
+        <h4>
           <a href="">Locales</a>
-          </h4>
-        </li>
-        <li>
-          <h4>
+        </h4>
+      </li>
+      <li>
+        <h4>
           <a href="">Contacto</a>
-          </h4>
-        </li>
-        <li>
-          <h4>
-          </h4>
-        </li>
-      </ul>
-    </nav>
-          <a> 
-            <img class="carrito size" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" src="/images/shopping-cart.png">
-          </a>
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-  <div class="offcanvas-header">
-    <h3 id="offcanvasRightLabel">Tu pedido</h3>
-    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body">
-    <img class="carrito2" src="/images/alfajor.png" alt="foto-compra"> 
-    <div class="descripcion">
-    <h3 class="producto">Producto</h3>
-    <h4>$000</h4>
-    <label for="cantidad">Cantidad:</label>
+        </h4>
+      </li>
+    </ul>
+    </div>
+
+    <a class="size login" href="/usuario"><i class="fa-solid fa-user"></i>
+    </a>
+  </nav>
+  <a>
+    <img class="carrito size" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"
+      src="/images/shopping-cart.png">
+  </a>
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+    <div class="offcanvas-header">
+      <h3 class="texto_h3" id="offcanvasRightLabel">Tu pedido</h3>
+      <button type="button_home" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <img class="carrito2" src="/images/alfajor.png" alt="foto-compra">
+      <div class="descripcion">
+        <h3 class="producto texto_h3">Producto</h3>
+        <h4>$000</h4>
+        <label for="cantidad">Cantidad:</label>
         <select name="cantidad" id="cantidad">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
         </select>
       </div>
       <br>
       <hr>
-      <h3>Total:    $ </h3>
-      <button class="btn ver-pedido" type= "button" >Ver pedido</button><br>
-      <a href="/pedidos"><button class="btn terminar-pedido" type="button" >Terminar pedido</button></a>
+      <h3>Total: $ </h3>
+      <button class="btn ver-pedido" type="button">Ver pedido</button><br>
+      <a href="/pedidos"><button class="btn terminar-pedido" type="button">Terminar pedido</button></a>
 
 
 
-
-  </div>
-</div>
-          
-    <div class="overlay">
-  <h1>HELÁRTICO</h1>
-  <h3>1000 razones para elegirnos</h3>
-  
-  
-    <br>
-    <button class="button_carrusel"><h5>SOBRE NOSOTROS</h5></button>
-      </div>
-
-
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-   <div>
-
-    <a class="size login" href="/usuario"><i class="fa-solid fa-user"></i>
-    </a>   
-    
-  
-   </div>
 
 </header>
