--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -12,26 +12,13 @@
 
 </header>
 <a href="/productos/create" class="btn btn-danger">Crear nuevo producto</a>
-<main class="main_productos mainComidas">
+<main class="mainComidas">
 
 
   <section id="galeria" class="container btn-group-vertical">
     
     
-      <input type="radio" class="btn-check" name="btnradio" id="btnradio1" checked>
-      <label class="btn boton-todo" for="btnradio1">Todo</label>
-
-      <input type="radio" class="btn-check" name="btnradio" id="btnradio2" >
-      <label class="btn boton-helados" for="btnradio2">Helados</label>
-
-      <input type="radio" class="btn-check" name="btnradio" id="btnradio3" >
-      <label class="btn boton-paletas " for="btnradio3">Paletas</label>
-
-      <input type="radio" class="btn-check" name="btnradio" id="btnradio4" >
-      <label class="btn boton-tortas " for="btnradio4">Tortas</label>
-
-       <input type="radio" class="btn-check" name="btnradio" id="btnradio5" >
-      <label class="btn boton-alfajores " for="btnradio5">Alfajores</label>
+    
      
       
       <div class="row">
