--- a/src/views/sabores.ejs
+++ b/src/views/sabores.ejs
@@ -6,46 +6,8 @@
 </head>
 
 
-  <header>
-    <nav>
-      <ul>
-        <li>
-          
-          <img class="logo ubicar" src="/images/logo_helartico.png">
-         
-        </li>
-        <li>
-          <h4> 
-          <a href="/">Inicio</a>
-         </h4>
-        </li>
-        <li>
-          <h4>
-          <a href="/productos">Productos</a>
-          </h4>
-        </li>
-        <li>
-          <h4>
-          <a href="">Sabores</a>
-          </h4>
-        </li>
-        <li>
-          <h4>
-          <a href="">Locales</a>
-          </h4>
-        </li>
-        <li>
-          <h4>
-          <a href="">Contacto</a>
-          </h4>
-        </li>
-        <li>
-          <h4>
-          <a> <img class="size" src="/images/shopping-cart.png"></a>
-          </h4>
-        </li>
-      </ul>
-    </nav>
+<header>
+  <%- include('./partials/header') %>
 </header>
 
 <main>
