agrega método delete

--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -46,7 +46,7 @@
                 <%= prod.precio %>
                 </h5>
               
-              
+              <a href="/productos/delete/<%= prod.id %> " class="btn btn-info m-1">Borrar</a>  
               <a href="/administrador"><button class=" boton">Editar producto</button></a>
               <a href=""><button class="boton">Añadir al carrito</button></a>
             </div>
