--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -46,8 +46,9 @@
                 <%= prod.precio %>
                 </h5>
               
-              <a href="/productos/delete/<%= prod.id %> " class="btn btn-info m-1">Borrar</a>  
-              <a href="/administrador"><button class=" boton">Editar producto</button></a>
+              <a href="/productos/delete/<%= prod.id %> " class="btn btn-info m-1">Borrar</a> 
+              
+              <a href="/productos/edit/<%= prod.id %>"><button class=" boton">Editar producto</button></a>
               <a href=""><button class="boton">Añadir al carrito</button></a>
             </div>
           </div>
