cambia el html de productos

--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -48,8 +48,8 @@
               
               <a href="/productos/delete/<%= prod.id %> " class="btn btn-info m-1">Borrar</a> 
               
-              <a href="/productos/edit/<%= prod.id %>"><button class=" boton">Editar producto</button></a>
-              <a href=""><button class="boton">Añadir al carrito</button></a>
+              <a href="/productos/edit/<%= prod.id %>"><button class=" btn">Editar</button></a>
+              <a href=""><img class="iconos" src="/images/shopping-cart.png"></a>
             </div>
           </div>
           <% } ) %>
