--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -352,8 +352,10 @@ header nav ul a {
 /*------------------------productos.html------------------------------*/
 
 .row {
-  margin-left: 10%;
-  margin-top: -25%
+  margin-left: 10%;;
+  border: solid;
+  margin-top:-45px;
+
 }
 
 
@@ -547,7 +549,11 @@ footer ul li {
   top: 85px;
 }
 
-
+.iri {
+  border: solid;
+  width: 100px;
+  height: 100px;
+}
 
 .iconos{
 	width: 55px;
