--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
     <title>HELÁRTICO</title>
     <link rel="icon" href= "/images/pixlr-bg-result.png" />
     <script src="https://kit.fontawesome.com/278943c891.js" crossorigin="anonymous"></script>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 
