--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -5,7 +5,7 @@
 
 header {
 position: fixed;
-top: -25px;
+top: -20px;
 width: 100%;
 position: relative;
 margin: 2% auto 10% auto;
@@ -352,10 +352,9 @@ header nav ul a {
 /*------------------------productos.html------------------------------*/
 
 .row {
-  margin-left: 10%;;
-  border: solid;
+  margin-left: 370px;
   margin-top:-45px;
-
+  margin-right: -370px;
 }
 
 
@@ -373,6 +372,8 @@ header nav ul a {
 
 .mainComidas #galeria img {
   object-fit: cover;
+  width: 100%;
+  height: 250px;
 }
 
 .mainComidas #galeria img:hover {
@@ -427,14 +428,10 @@ header nav ul a {
 
 
 .accordion{
-  position: relative;
-  right: 5.4vw;
+
 }
 .accordion-button{
   background-color: rgb(216, 162, 123);
- 
-  
- 
 }
 
 .accordion-header{
@@ -507,7 +504,7 @@ footer ul li {
 
 .footer_productos{
   position: relative;
-  bottom: -1000px;
+  bottom: -500px;
   margin-bottom: -10px;
   background: rgb(207, 181, 164);
 }
@@ -547,11 +544,7 @@ footer ul li {
   top: 85px;
 }
 
-.iri {
-  border: solid;
-  width: 100px;
-  height: 100px;
-}
+
 
 .iconos{
 	width: 55px;
