--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
         <title>Helártico</title>
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" ></script>
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+        <script src="https://kit.fontawesome.com/278943c891.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="/css/estilo1.css" >
     </head>
 
@@ -24,7 +26,8 @@
                 <div class="btn-group">
                     <button type="button" class="btn btn-default dropdown-toggle"
                             data-toggle="dropdown">
-                            <i class="fa fa-user fa-fw"></i> User</a> <span class="caret"></span>
+                            <a class="" href="/usuario/login"><i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+                            
                     </button>
                   
                     <ul class="dropdown-menu" role="menu">
