--- a/src/views/usuario.ejs
+++ b/src/views/usuario.ejs
@@ -14,10 +14,12 @@
   <script src="https://kit.fontawesome.com/278943c891.js" crossorigin="anonymous"></script>
   
 </head>
+
+
  
   <title>Login</title>
 
-<img class="fondo" src="/images/791132.jpg">
+<img class="fondo" src="">
 <body>
     <div class="window-notice" id="window-notice">
         <div class="content">
@@ -28,7 +30,7 @@
                     <div class="login-container">
                       <div class="register">
                         <h2>Registrarse</h2>
-                        <form action="/usuario" method="POST" enctype="multipart/form-data">
+                        <form action="/usuario2" method="POST" enctype="multipart/form-data">
                           
                           <input type="text" placeholder="Nombre de usuario" class="nombre" name="name">
                           <% if (locals.errors && errors.name) { %>
