--- a/public/css/estilo1.css
+++ b/public/css/estilo1.css
@@ -155,6 +155,14 @@ body {
     
 }
 
+#product1 .pro-container { 
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    flex-wrap: wrap;
+
+}
+
 #product1 .pro {
     width: 23%;
     min-width: 250px;
@@ -166,6 +174,7 @@ body {
     border: 1px solid #cce7d0;
     margin: 15px 0px;
     transition: 0.2s ease;
+    position: relative
 }
 
 #product1 .pro:hover {
@@ -212,9 +221,10 @@ body {
     border: 1px solid blue;
     position: absolute;
     bottom : 20px;
+    right: 10px;
 }
 
-
+/**------------products-----------------------------*/
 
     .footer-distributed{
         background: rgb(233, 243, 249);
