--- a/public/css/estilo-usuario.css
+++ b/public/css/estilo-usuario.css
@@ -7,7 +7,7 @@ body{
 *,:after,:before{box-sizing:border-box}
 .clearfix:after,.clearfix:before{content:'';display:table}
 .clearfix:after{clear:both;display:block}
-a{color:inherit;text-decoration:none}
+a{color:blue;text-decoration:none; text-align: center}
 
 .login-wrap{
 	width:100%;
@@ -71,8 +71,11 @@ a{color:inherit;text-decoration:none}
 .login-form .group .input,
 .login-form .group .button{
 	width:100%;
-	color:rgb(18, 18, 18);
+	color:rgb(18, 17, 17);
 	display:block;
+	font-size: medium;
+	font-family: 'Lucida Sans'
+
 }
 .login-form .group .input,
 .login-form .group .button{
@@ -139,12 +142,14 @@ a{color:inherit;text-decoration:none}
 	transform:rotate(0);
 }
 
-.hr{
-	height:2px;
-	margin:60px 0 50px 0;
-	background:rgba(255,255,255,.2);
-}
+
 .foot-lnk{
 	text-align:center;
     color: #1161ee;
+	padding-top: 5%;
+}
+
+.text-danger {
+	color: red;
+	font-size: medium;
 }
