--- a/public/css/estilo1.css
+++ b/public/css/estilo1.css
@@ -166,6 +166,7 @@ body {
 #product1 .pro {
     width: 23%;
     min-width: 250px;
+    min-height: 320px;
     padding: 10px 12px;
     border-radius: 15%;
     background:  rgb(233, 243, 249);
@@ -184,8 +185,22 @@ body {
     width: 100%;
     border-bottom: 1px solid;
     cursor: pointer;
+    height: 60%;
+    object-fit: cover;
 
 
+}
+
+
+div.text-danger {
+    color: red;
+    font: 200;
+}
+
+.a {
+    color: blue;
+    text-align: center;
+    font-size: 16px;
 }
 
 #product1 .pro .des{
@@ -215,13 +230,13 @@ body {
     height: 40px;
     line-height: 40px;
     border-radius: 50px;
-    background-color: #ffffff;
     font-weight: 500;
-    color: blue;
-    border: 1px solid blue;
     position: absolute;
     bottom : 20px;
-    right: 10px;
+    left: 25%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 /**------------products-----------------------------*/
