--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
+    <%- include('./partials/head') %>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,20 +19,20 @@
 
            <div>
             <ul id="navbar">
-                <li> <a href="/" class="active">Home </a></li>
+                <li> <a href="/" class="">Home </a></li>
                 <li> <a href="/products">Shop </a></li>
                 <li> <a href="">Nosotros </a></li>
                 <li> <a href="">Contacto </a></li>
                 <div class="btn-group">
                     <button type="button" class="btn btn-default dropdown-toggle"
                             data-toggle="dropdown">
-                            <a class="" href="/usuario/login"><i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+                            <a class="" href="/login"><i class="fa-solid fa-arrow-right-to-bracket"></i></a>
                             
                     </button>
                   
                     <ul class="dropdown-menu" role="menu">
-                      <li><a href="#">Acción #1</a></li>
-                      <li><a href="#">Acción #2</a></li>
+                      <li><a href="/usuario/login">Login</a></li>
+                      <li><a href="/usuario/register">Resistrarse</a></li>
                       <li><a href="#">Acción #3</a></li>
 
             
